# talos-lab

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
talos_lab/: addons.py  cli.py  commands.py  config.py  exceptions.py  images.py  kubeconfig.py  network.py  paths.py  state.py  talosctl.py  tofu.py  vms.py
talos_lab/templates/: addons.yaml  main.tf.j2  network.xml.j2  outputs.tf.j2  variables.tf.j2  vm-profiles.yaml
